--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
+# GitHub Action for generating a contribution graph with a snake eating the contributions
 name: Generate Snake
 
-# Controls when the action will run.
+# Controls when the action will run
 on:
   schedule:
-      # every 12 hours
+      # Every 12 hours
     - cron: "0 */12 * * *"
 
-  # This command allows us to run the Action automatically from the Actions tab.
+  # This command allows us to run the Action automatically from the Actions tab
   workflow_dispatch:
   
   # Also run on every push on the master branch
